[#4389035] Overrode ".row > input" field's definition from base.css in app.css, to fix edit view mis-alignment.

--- a/content/css/app.css
+++ b/content/css/app.css
@@ -166,3 +166,9 @@ input.field-error
 {
     color: #f00;
 }
+
+.row > input:not([type|=radio]):not([type|=checkbox])
+{
+    height: auto;
+    padding: 10px 10px 0 110px;
+}
